--- a/en/artworks.html
+++ b/en/artworks.html
@@ -44,7 +44,9 @@
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="screenshots" /></a><br></p>
 
 <p><b>Poem &amp; Music</b><br>
-Poem is the soul, and music is the form.<br>
+Poem is the soul, and music is the form.</p>
+
+<p style="display:none;">
 I'm an independent singer songwriter, I always want to make different background music to match the poems written by myself.
 Some samples, please take a look here:<br>
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank">https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg</a>. 
@@ -52,12 +54,14 @@ Some samples, please take a look here:<br>
 <p><br></p>
 
 
-<h2>Original Creative Drawing Artworks Creating</h2>
+<h2>Original Creative<br>Drawing Artworks Creating</h2>
 <p class="section">
 <a href="https://curveart7.blogspot.com" target="_blank"><img src="../images/original-artworks.png" class="screenshots" /></a>
 <br><br>
 <b>Thinking &amp; Drawing Artworks</b><br>
-Thinking is the soul inside, and Drawing is the form.<br>
+Thinking is the soul inside, and Drawing is the form.</p>
+
+<p style="display:none;">
 My personal creative drawing artworks with imaging in mind without reference or model,
 some sample can be visited here:<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
@@ -69,18 +73,20 @@ some sample can be visited here:<br>
 <p class="section">
 <a href="https://www.twitter.com/tkmrysnb" target="_blank"><img src="../images/original-shodo.png" class="screenshots" /></a>
 <br><br>
-<b>Poem &amp; Kanji Artworks</b><br>
+<b>Poem &amp; Kanji Artworks Maker</b></p>
+
+<p style="display:none;">
 I'm a Shodo artist, Kanji artworks creator.<br>
 I always want to make different Shodo (Calligraphy) style for my beautiful poems.<br>
 <a href="https://curveart7.blogspot.com" target="_blank">https://curveart7.blogspot.com</a>.
 </p>
 
 
-<hr>
-<p>I create my artworks without any template or reference!<br>
+<p style="display:none;">
+I create my artworks without any template or reference!<br>
 Just create everything imaging in my mind!<br>
 More info, please visit my account on Twitter: <a href="https://www.twitter.com/tkmrysnb">https://www.twitter.com/tkmrysnb</a>.</p>
-
+</p>
 
 
 </div>
