--- a/en/contact.html
+++ b/en/contact.html
@@ -40,7 +40,7 @@
 <!--li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li-->
 <li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
 
-<p>Please directly connect me via Twitter or <br> message me via email.</p>
+<p style="display:none;">Please directly connect me via Twitter or <br> message me via email.</p>
 
 <!--div style="height:100vh; width:vw;"></div-->
 
