--- a/en/index.html
+++ b/en/index.html
@@ -44,7 +44,7 @@
 Music, painting, poem and shodo (calligraphy).</h2>
 <p>美術品を発見、販売。<br>
 オリジナル音楽, オリジナルアート, 歌詞の作成, 曲の作成, 音楽の作成, 原創音樂, 原創藝術, <br>
-Original music, Original artworks, Lyric creation, Song creation, Music creation.<br><br>
+Original music, Original artworks, Lyrics creation, Song creation, Music creation.<br><br>
 </p>
 
 
