--- a/en/about.html
+++ b/en/about.html
@@ -32,9 +32,10 @@
 <p>
 <!-- img class="logo" src="../images/logo.svg" style="height:220px;width:auto;float:left; margin-top:0.2em;margin-right:1em;margin-bottom:0.5em;" -->
 
-
+<div style="display:none;">
 some softwares:<br>
 <a href="http://www.sevenuc.com/en/apps.html">Mac app &amp; iOS apps</a>.</p>
+</div>
 
 
 <!--div style="height:100vh; width:vw;"></div-->
@@ -51,7 +52,7 @@ some softwares:<br>
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
