--- a/en/artworks.html
+++ b/en/artworks.html
@@ -39,7 +39,7 @@
 <!--div id="player1" class="aplayer" style="display:none;"></div-->
 <div class="smallscreen">
 
-<h2>Original Music Creating</h2>
+<h2>Original<br>Music Creating</h2>
 <p class="section">
 <a href="https://www.youtube.com/channel/UCgWz8SBImzRUd5XeOlw0VJg" target="_blank"><img src="../images/original-music.png" class="screenshots" /></a><br></p>
 
@@ -110,7 +110,7 @@ More info, please visit my account on Twitter: <a href="https://www.twitter.com/
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
