--- a/en/debugger.html
+++ b/en/debugger.html
@@ -551,11 +551,10 @@ Above is the simplest approach to debug Javascript scripts or Node.js applicatio
    <a href="http://www.sevenuc.com"><img src="http://www.sevenuc.com/images/logo.svg" class="logo"></a><span><p class="copyright">
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
-      <a href="http://www.sevenuc.com/en/terms.html"> Terms </a>|
+      <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
       <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
-
 </body></html>
 
