--- a/en/about.html
+++ b/en/about.html
@@ -37,6 +37,14 @@ some softwares:<br>
 <a href="http://www.sevenuc.com/en/apps.html">Mac app &amp; iOS apps</a>.</p>
 </div>
 
+<div class="smallscreen">
+<a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"><br>
+<p>The next generation intelligence microcomputer.<br>
+Rebuild foundational technologies of computer system from scratch!</p>
+</div>
+
+
+
 
 <!--div style="height:100vh; width:vw;"></div-->
 <p><br><br><br><br><br></p>
