--- a/en/index.html
+++ b/en/index.html
@@ -35,10 +35,6 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<div class="smallscreen">
-<!--h1 id="project_title">Welcome</h1><br><br-->
-<!--img src="http://www.sevenuc.com/images/home-hero.jpg">-->
-</div>
 
 <h2>Original Artworks Creating<br>
 Music, painting, poem and shodo (calligraphy).</h2>
@@ -46,6 +42,11 @@ Music, painting, poem and shodo (calligraphy).</h2>
 オリジナル音楽, オリジナルアート, 歌詞の作成, 曲の作成, 音楽の作成, 原創音樂, 原創藝術, <br>
 Original music, Original artworks, Lyrics creation, Song creation, Music creation.<br><br>
 </p>
+
+<div class="smallscreen">
+<a href="http://www.sevenuc.com/images/ParaOS.png" target="_blank"><img src="http://www.sevenuc.com/images/ParaOS.png" class="screenshots">
+</div>
+
 
 
 <div style="display:none;">
