--- a/en/resources.html
+++ b/en/resources.html
@@ -70,7 +70,7 @@ Mr. 陳百強/Danny Chan Pak-keung.<br>
 1, The Yuet - Chinese text to <a href = "http://www.sevenuc.com/en/tts.html">speech synthesis engine</a>.<br>
 2, Translation between Cantonese and Mandarin, <a href="http://www.sevenuc.com/en/lecher.html">some examples</a>.<br>
 3, Fun with <a href="http://www.sevenuc.com/en/proverbs.html">Cantonese idioms and proverbs</a>.<br>
-<a href="http://blog.sevenuc.com/music/index.html"><img src="http://blog.sevenuc.com/music/wan/Wan_Kwong.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>&nbsp;<a href="http://blog.sevenuc.com/music/index.html"><img src="../images/opera.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br>
+<a href="http://blog.sevenuc.com/music/index.html"><img src="../images/cantonese/Wan_Kwong.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a>&nbsp;<a href="http://blog.sevenuc.com/music/index.html"><img src="../images/opera.jpg" style="margin-top: 1em;margin-bottom: 1em;width:auto;height:170px;"></a> <br>
 4, *  You should listen the operas and the songs and study the lyrics from Mr. 尹光/Wan Kwong if you want to learn the true Cantonese words and pure pronunciation of Cantonese. <br>
 More fun with music and lyrics from <a href="http://blog.sevenuc.com/music/index.html" target="_blank">Mr. 尹光/Wan Kwong online</a>.<br><br>
 
