--- a/en/log.html
+++ b/en/log.html
@@ -22,7 +22,7 @@
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title">ChangeLog 変更履歴</h1>
+      <h1 id="project_title">ChangeLog 改訂履歴</h1>
       <h2 id="project_tagline">ChangeLog of Cantonese Speech Synthesis.</h2>
     </header>
 </div>
