--- a/en/Speare.html
+++ b/en/Speare.html
@@ -15,14 +15,14 @@
 <meta name="keywords" content="Speare,IDE,Code Editor,Text Editor,Ruby Debugger,mruby Debugger,Lua Debugger,Python Debugger,PHP Debugger,Syntax Highlighting,Lex,Parser,Compiler,Interpreter,Programming Language,TextEdit,Vim,Emacs,Qt,GTK+,Tcl/Tk,TextMate,CotEditor,Textadept,Android Studio,ActiveState,Komodo,Xcode,Lazarus,ZeroBraneStudio,Visual Studio Code,Eclipse,Scrpting Language,Lua,Scheme,Python,Ruby,C,C++,SQL,Objective-C,Swift,Kotlin,Haxe,Haskell,TCL,Javascript,Lisp,Perl,PHP,GO,Markdown,Node">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
-.warning {color:#cce619;}
+/*.warning {color:#cce619;}*/
 th { background:#333; color:#f0f0f0;text-align: center;}
 .strike {text-decoration: line-through;}
 .screen {width:480px;height:auto;max-width:100%;}
 .smallicon { height:24px;width:auto;vertical-align:middle;margin-right:10px;}
 .donate { font-style: italic; font-size: small; color:#007f00;}
 .greenbig {color: #007f00;font-size:1.2em;}
-.green, gr, lt{color: #007f00;}
+.green, gr, lt{color: #007f00; font-weight: bold;}
 .dark {color:#b397db; font-size: 12px;}
 ltab { margin-left: 20px; }
 lt {color:#007f00;}
