--- a/en/artworks.html
+++ b/en/artworks.html
@@ -15,7 +15,7 @@
 <meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks, Independent Singer Songwriter">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
-.warning {color:#cce619;}
+/*.warning {color:#cce619;}*/
 .artworks { width: auto; height: 241px; max-width:100%;border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
 .artworks2 { width: auto; height: 240px; max-width:100%;border-radius: 10px; float:left; margin:0 1em 0.5em 0;padding: 4px 4px 4px 4px; }
 .appicon { width: auto; height: 92px; border-radius: 10px; float:left; margin:0 1em 0.5em 0}
