--- a/en/debugger.html
+++ b/en/debugger.html
@@ -17,9 +17,9 @@
 <style type="text/css">
 .logo {  height:42px;  width: auto; }
 .none {  padding:0;  margin: 0; }
-.warning {color:#cce619;}
+/*.warning {color:#cce619;}*/
 .yell {color:#cce619;}
-.green {color: #007f00;}
+.green {color: #007f00;font-weight: bold;}
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
 </style>
 <title>Debugging code with Speare Code Editor</title>
