--- a/en/guard.html
+++ b/en/guard.html
@@ -20,7 +20,7 @@
 .fileicon { height:44px; width: auto; }
 .evil {color:#ff0000; }
 .dark {color:#333; }
-.warning {color:#cce619;}
+/*.warning {color:#cce619;}*/
 .greenbig {color: #007f00;font-size:1.2em;}
 .block { color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }
 .tell { color:#000000; font-weight: bold; }
