--- a/en/littlefox.html
+++ b/en/littlefox.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 .none {  padding:0;  margin: 0; }
-.warning { color:#cce619;}
+/*.warning { color:#cce619;}*/
 .green, gr, lt{color: #007f00;}
 .strike {text-decoration: line-through;}
 .treasure { color: rgba(0, 0, 0, 0.7); font-style: italic; font-weight: bold; background: none; }
