--- a/en/powerreader.html
+++ b/en/powerreader.html
@@ -18,7 +18,7 @@
 <style type="text/css">
 /*.hilight {color:#cce619;}*/
 .smallsection { max-width: 480px; }
-.warning {color:#cce619;}
+/*.warning {color:#cce619;}*/
 .smallicon { height:32px; width:auto; vertical-align:middle;}
 .note { color:#ffffff; background:#FF4081; border-radius: 4px; padding:2px 2px 2px 2px; }
 .block {  color:#000000;background:#9fa8b5; padding:10px 10px 10px 10px;border-radius: 4px; }
