--- a/en/artworks.html
+++ b/en/artworks.html
@@ -71,7 +71,7 @@ some sample can be visited here:<br>
 
 <h2>Original Shodo Artworks Creating</h2>
 <p class="section">
-<a href="https://www.twitter.com/tkmrysnb" target="_blank"><img src="../images/original-shodo.png" class="screenshots" /></a>
+<a href="https://www.twitter.com/tkmrysnb" target="_blank"><img src="../images/original-shodo.png" width="320px" class="screenshots" /></a>
 <br><br>
 <b>Poem &amp; Kanji Artworks Maker</b></p>
 
