--- a/en/contact.html
+++ b/en/contact.html
@@ -36,8 +36,7 @@
 
 <ul class="nonelist">
 <!--li><img src="../images/g+.jpg" class="smallimg" />&nbsp;&nbsp;<a href="javascript:void(0);">Google+</a></li-->
-<li> <img src="../images/Twitter.png" class="smallimg" />&nbsp;&nbsp; Twitter:<a href="https://www.twitter.com/tkmrysnb" target="_blank"> tkmrysnb </a></li>
-<!--li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li-->
+<li><img src="../images/skype.png" class="smallimg" />&nbsp;&nbsp; Skype: <a href="javascript:void(0);"> sevenuc </a></li>
 <li><img src="../images/email.png" class="smallimg" />&nbsp;&nbsp; Email: <a href="mailto:info@sevenuc.com">info@sevenuc.com</a></li></ul>
 
 <p style="display:none;">Please directly connect me via Twitter or <br> message me via email.</p>
@@ -59,7 +58,7 @@
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
