--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
+<meta property="og:title" content="Music product development and artworks design.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,25 +9,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Original artworks creating, music, painting, poem and shodo (calligraphy).">
-<meta name="service" content="Independent singer songwriter, independent personal music publishing">
+<meta name="description" content="Cross border music creating from and to the golden legend era, including NES, SNES, GBA, N64, PSX, PS2, PSP, XBOX, GAMECUBE, WII, NDS, 3DS, and more.">
+<meta name="service" content="Music creating services.">
 <meta name="author" content="http://www.sevenuc.com/">
-<meta name="keywords" content="原創音樂,オリジナル音楽,original music,原創藝術,オリジナルアート,original artworks,歌詞の作成,曲の作成,音楽の作成,Lyric creation,Song creation,Music creation,Shodo,Calligraphy,Kanji Artworks,Independent Singer Songwriter">
+<meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,Super Nintendo Entertainment System,Game Music Emulator,Instrument Emulator,Game Sound System,Video Game Music,Super Mario World,Chip music synthesizer,VST plug-ins">
 <link rel="stylesheet" type="text/css" media="screen" href="http://www.sevenuc.com/css/stylesheet.css">
 <style type="text/css">
 .icon { float:left;margin: 0 1em 1em 0;width:96px;height:auto;padding: 4px 4px 4px 4px;border-radius: 4px;-moz-border-radius: 4px;-webkit-border-radius: 4px; vertical-align:center;}
 .small { font-style: italic; font-size: small; color:#000000; padding:4px 4px 4px 4px; border-radius: 2px; }
 .green {color: #007f00;}
 </style>
-<title>Original Artworks Creating</title>
+<title>Sevenuc Consulting</title>
 </head>
 <body>
 
 <!-- HEADER -->
 <div id="header_wrap" class="outer">
     <header class="inner">
-      <h1 id="project_title"></h1>
-      <h2 id="project_tagline"></h2>
+      <h1 id="project_title">Music Creating Services</h1>
+      <h2 id="project_tagline">Music product development and artworks design.</h2>
     </header>
 </div>
 
@@ -35,36 +35,13 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-
-<h2>Original Artworks Creating<br>
-Music, painting, poem and shodo (calligraphy).</h2>
-<p>美術品を発見、販売。<br>
-オリジナル音楽, オリジナルアート, 歌詞の作成, 曲の作成, 音楽の作成, 原創音樂, 原創藝術, <br>
-Original music, Original artworks, Lyrics creation, Song creation, Music creation.<br><br>
+<h2></h2>
+Cross border music creating from and to the golden legend era, <br>
+including NES, SNES, GBA, N64, PSX, PS2, PSP, XBOX, GAMECUBE, WII, NDS, 3DS, and more.<br><br>
 </p>
 
 <div class="smallscreen">
 <a href="http://www.sevenuc.com/images/ParaOS.png" target="_blank"><img src="http://www.sevenuc.com/images/ParaOS.png" class="screenshots">
-</div>
-
-
-
-<div style="display:none;">
-<p>
-I'm plan to collect big money by sale my artworks, including music, drawing photographs, poem and shodo (calligraphy), and any other forms of artworks created by me to process a big project, a charity fund plan to rebuild language system, computer system, and education system to make different people groups to use their own real nature languages and their own real writing system in daily life. The current computer system, education system and almost any industry fields will be completely correspond to it. Please purchase my creative artworks to donate this project, thank you.
-</p>
-<h2>Speare code editor</h2>
-<p><a href="http://www.sevenuc.com/en/Speare.html"><img src="http://www.sevenuc.com/images/Speare/logo.png" class="icon"></a>
-<a href="http://www.sevenuc.com/en/Speare.html">Speare</a> is an ultra lightweight code editor and a small IDE that provides debugging environment for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl. It was originally developed to providing a native scripting language debugging environment that seamlessly integrated with C and C++, and with an efficient code navigation and call routines tracing ability. Speare has very simple interface that allows end user to add a new programming language code runner, parser, syntax highlighting, code formatter and debugger to it. Most of the debuggers of Speare code editor supports extending themselves in source code level and directly switch between any version of self-compiled scripting language interpreters. </a></p>
-<p><br><br></p>
-
-
-<h2>Anida Audio Codec</h2>
-<p><a href="http://www.sevenuc.com/en/anida.html"><img src="http://www.sevenuc.com/images/Anida/Anida_logo.png" class="icon"></a>
-<a href="http://www.sevenuc.com/en/anida.html">Anida Audio Codec</a> 
-is an audio codec and audio compression format that designed to reduce audio data size to reduce transfer time and save disk space. It can be easily applied to large number of technology and product.<br><br>
-<b>Small! Fast! <br> Enjoy ultra small audio file now!</b><br>
-</p>
 </div>
 
 
