--- a/en/proverbs.html
+++ b/en/proverbs.html
@@ -718,7 +718,7 @@ Hong Kong, Macau, Macao, Canton, Cantonese, Guangzhou, Chinese, China, dictionar
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
