--- a/en/service.html
+++ b/en/service.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta property="og:title" content="Senior software system technical consulting service.">
+<meta property="og:title" content="Independent music product development and artworks design.">
 <meta property="og:type" content="product">
 <meta property="og:url" content="http://www.sevenuc.com/">
 <meta property="og:image" content="http://www.sevenuc.com/favicon.ico">
@@ -9,12 +9,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Reliable partner for your software system architecture design.">
-<meta name="service" content="Product development and independent consulting services">
+<meta name="description" content="Reliable partner for your music product development and artworks design.">
+<meta name="service" content="Independent music product development and artworks design.">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,iPhone,iPad,Android,iOS,Embedded Linux,Real Time System,RTOS,JVM,単語分割エンジン,単語分割,斷詞,分詞,中文斷詞,中文分詞,文本分類,人工智能,人工智慧,模式識別,機器學習,機械学習,自然語言處理,自然言語処理,機器翻譯,機械翻訳,動畫合成,語音合成,音聲合成,語音識別,音聲認識,Embedded System,RTOS,eCos,μC/OS-II,VxWorks,QNX,FreeRTOS,NuttX,ThreadX,RTEMS">
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
-<title> Services </title>
+<title>Services</title>
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 <div id="header_wrap" class="outer">
     <header class="inner">
       <h1 id="project_title">Services</h1>
-      <h2 id="project_tagline">Reliable partner for your software system architecture design.</h2>
+      <h2 id="project_tagline">Reliable partner for your music product development and artworks design.</h2>
     </header>
 </div>
 
@@ -30,9 +30,9 @@
 <div id="main_content_wrap" class="outer">
 <section id="main_content" class="inner">
 
-<p>We provides you senior consultant service, high-quality software system architecture design, from embedded system (microelectronics system, microcontroller system), mobile device, to tablet PC, desktop and cloud service integrated system solutions. Sevenuc Consulting have more than 10 years of consulting experience in extremely rich industry fields, provides you the best solution from a number of design options, considering the cost, risk, performance, reliability, and maintainability. We always create innovative solutions to help our clients meet their largest transformational challenges, learn about a variety of different cutting-edge technologies and focus on growing a strong set of technical and consulting skills, then progressing onto solution design and technical leadership roles at increasing levels of responsibility.</p>
+<p>We provides you senior music product development and artworks design service, high-quality music creating, from modern style to chip music style, from game box platform to desktop and cloud service integrated complete solutions. Sevenuc Consulting have more than 10 years of music making experience in extremely industry styles, provides you the best solution from a number of design options. We always create creative magic sound to help our clients meet their largest business challenges, continuing learn a variety of very rare sound and focus on growing a strong set of music styles and making skills, then progressing them into music creating.</p>
 
-<p>By using our industry-leading research, advanced analytics and the latest technology, gaining an understanding of the unique business and technical requirements on each engagement to facilitate the most appropriate solution design, we analyses and develops enterprise technology solutions to solve our clients' complex business issues and help them explore new possibilities. We also especially help our clients to establish or upgrade software development infrastructures thought out the whole application development life cycle including requirement management system and software configure management system etc. We use <a href="https://en.wikipedia.org/wiki/Scrum_(software_development)">agile process</a> to manage the various stages of product development, and advise our clients with innovative solutions to better run their business and frequently go above and beyond expectation of them.</p>
+<p>By using our industry-leading technology research, advanced music making technology, we gaining an understanding of the unique business on each engagement to facilitate the most appropriate music creating and artworks design, we analyses and develops music product to solve our clients' complex business requirements and help them spreading their business information. We also especially have rich experience in managing the various stages of music product development, and advise our clients with innovative solutions to better run their business and frequently go above and beyond expectation of them.</p>
 <p><br><br><br><br><br></p>
 
 <!--div style="height:100vh; width:vw;"></div-->
@@ -48,7 +48,7 @@
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
