--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -46,7 +46,7 @@ Please forward to there:<a href="powerreader.html"> powerreader.html</a></p>
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
