--- a/en/log.html
+++ b/en/log.html
@@ -124,7 +124,7 @@ such as: isutf8(), strlen(), substr(), strchr(), charat(), strtok(), split(), jo
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
