--- a/en/uftp.html
+++ b/en/uftp.html
@@ -89,7 +89,7 @@ This small util is really useful when you want quickly move files between Mac an
    <span class="copyright"> © 2020 Sevenuc Consulting <br>All rights reserved.</span>
       <a href="http://www.sevenuc.com/en/about.html"> About </a>|
       <a href="http://www.sevenuc.com/en/apps.html"> Apps </a>|
-      <a href="http://www.sevenuc.com/en/artworks.html"> Artworks </a>|
+      <a href="http://www.sevenuc.com/en/service.html"> Service </a>|
       <a href="http://www.sevenuc.com/en/contact.html"> Contact </a></p></span>
  </footer>
 </div>
