--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 <section id="main_content" class="inner">
 
 <h2></h2>
-Cross border music creating from and to the golden legend era, <br>
-including NES, SNES, GBA, N64, PSX, PS2, PSP, XBOX, GAMECUBE, WII, NDS, 3DS, and more.<br><br>
+Cross border music creating and artworks design for<br>
+TV music, film music, game music, mobile music, chip music, and more.<br><br>
 </p>
 
 <div class="smallscreen">
