--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <meta name="viewport" content="width=device-width,initial-scale=1, minimum-scale=1">
-<meta name="description" content="Cross border music creating from and to the golden legend era, including NES, SNES, GBA, N64, PSX, PS2, PSP, XBOX, GAMECUBE, WII, NDS, 3DS, and more.">
+<meta name="description" content="Cross border music creating and artworks design for TV music, film music, game music, mobile music, web music, chip music, and more.">
 <meta name="service" content="Music creating services.">
 <meta name="author" content="http://www.sevenuc.com/">
 <meta name="keywords" content="Strategy Consultant,McKinsey,Bain,Boston Consulting Group,BCG,Booz,Oliver Wyman,A.T.Kearney,L.E.K. Consulting,PwC Consulting,Deloitte,Roland Berger,Accenture,Andersen Consulting,Gartner,BearingPoint,KPMG Consulting,Gallup,MYON Management &amp; Consultancy,HP,SAP,Clarkston,Newzoo,Hiragana,Katakana,Pebble,Samsung,Optical Character Recognition,OCR,Arabic,Persian,Khmer,Thai,Tibetan,Tamil,Devanagari,Pali,Sanskrit,Literacy,Machine Translation,Computational Linguistics,Grammar,Pronunciation,Romanisation,Text to Speech,TTS,Canto,Chinese,Cantonese,Yale,Jyutping,Speech Synthesis,Chinese Speech Synthesis,Text Classification,Text Categorisation,Data Mining,ASR,Automatic Speech Recognition,Natural Language Understanding,NLU,NLP,Natural Language Processing,Intelligent Information Retrieval,Machine Learning,Animation Synthesis,Knowledge Translation,Dictionary,AI,Robot,Artificial Intelligence,Super Nintendo Entertainment System,Game Music Emulator,Instrument Emulator,Game Sound System,Video Game Music,Super Mario World,Chip music synthesizer,VST plug-ins">
@@ -37,7 +37,7 @@
 
 <h2></h2>
 Cross border music creating and artworks design for<br>
-TV music, film music, game music, mobile music, chip music, and more.<br><br>
+TV music, film music, game music, mobile music, web music, chip music, and more.<br><br>
 </p>
 
 <div class="smallscreen">
