--- a/en/lecher.html
+++ b/en/lecher.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" media="screen" href="../css/stylesheet.css">
 <style type="text/css">
 red {color: red;}
+.strike {text-decoration: line-through;}
 </style>
 <title>Translate Mandarin to Cantonese</title>
 </head>
@@ -56,15 +57,25 @@ translate them to accurate words heavily depended on the text context and gramma
 there's so many characters have the same issue when translate Mandarin to Cantonese.<br></p>
 
 
+<h2>Pronunciations: </h2>
+<p>
+<span class="strike">圭街(gui jie)</span> → 圭街(gwai1 gaai1)<br>
+<span class="strike">限銀眼(xian yin yan)</span>  → 限銀眼(haan6 ngan4 ngaan5)<br>
+<span class="strike">元完(yuan wan)</span>  → 元(jyun4)完(jyun4)<br>
+<span class="strike">完院(wan yuan)</span>  → 完(jyun4)院(jyun4)<br>
+...<br>
+</p>
+
+
 <h2>Different translated words turn Mandarin to Cantonese: </h2>
 <p>
-特朗普 → 川普 (Donald Trump)<br>
-旧金山 → 三藩市 (San Francisco)<br>
-西藏 → 吐番 (Tibet)<br>
-柬埔寨 → 勤鄱尼亞/高棉 (Cambodia)<br>
-泰國 → 暹羅 (Siam/Thailand)<br>
-老挝 → 寮國 (Laos)<br>
-沙特阿拉伯 → 沙烏地阿拉伯 (Saudi Arabia)<br>
+<span class="strike">特朗普</span> → 川普 (Donald Trump)<br>
+<span class="strike">旧金山</span> → 三藩市 (San Francisco)<br>
+<span class="strike">西藏</span> → 吐番 (Tibet)<br>
+<span class="strike">柬埔寨</span> → 勤鄱尼亞/高棉 (Cambodia)<br>
+<span class="strike">泰國</span> → 暹羅 (Siam/Thailand)<br>
+<span class="strike">老挝</span> → 寮國 (Laos)<br>
+<span class="strike">沙特阿拉伯</span> → 沙烏地阿拉伯 (Saudi Arabia)<br>
 ... <br></p>
 
 <h2>Different names convert Mandarin to Cantonese: </h2>
