--- a/en/lecher.html
+++ b/en/lecher.html
@@ -60,6 +60,7 @@ there's so many characters have the same issue when translate Mandarin to Canton
 <h2>Pronunciations: </h2>
 <p>
 <span class="strike">圭街(gui jie)</span> → 圭街(gwai1 gaai1)<br>
+<span class="strike">立垃(li la)</span> → 立垃(lap6 laap6)<br>
 <span class="strike">限銀眼(xian yin yan)</span>  → 限銀眼(haan6 ngan4 ngaan5)<br>
 <span class="strike">元完(yuan wan)</span>  → 元(jyun4)完(jyun4)<br>
 <span class="strike">完院(wan yuan)</span>  → 完(jyun4)院(jyun4)<br>
