--- a/en/beak.html
+++ b/en/beak.html
@@ -40,12 +40,12 @@
 <h2>Beak <br><em>Version 1.1 </em></h2>
 
 <p>
-<b>Beak</b> is a small tool that can be used to lose weight of your source code, and generate obfuscated C and C++ source code by default. All user defined symbols can be replaced by very short tokens results that the compiled final binary will be smaller than its normal compiling. Beak is very small and the obfuscator itself was written with ANSI C (C89) from scratch, cross-platform, operation system and processor independent. </li>
+<b>Beak</b> is a small tool that can be used to lose weight of your source code, and generate obfuscated C and C++ source code by default. It was originally developed to reduce binary size of software used in embedded system but has an expected result made it became to a security tool that can hide symbol names in your software. All user defined symbols can be hidden and replaced by very short tokens results that the compiled final binary will be smaller than its normal compiling. The symbol names includes namespace, class name, function definitions etc. Beak is very small and the obfuscator itself was written with ANSI C (C89) from scratch, cross-platform, operation system and processor independent. </li>
 
 <h2>Result</h2>
 <ul><li>Smaller binary</li>
-<li>Hide API call in binary, hide the concrete implementation, and what techniques used in your software.</li>
-<li>Add difficulty for reverse engineering (decompile).</li></ul>
+<li>Hide symbol names in binary, function call, API call in binary, hide the concrete implementation, and what techniques used in your software.</li>
+<li>Improve difficulty for reverse engineering (decompile).</li></ul>
 
 <h2>Screenshots:</h2>
 <p><a href="../images/beak/screenshot.png" target="_blank"><img src="../images/beak/screenshot.png" class="screenshots"></a></p>
