--- a/en/Speare.html
+++ b/en/Speare.html
@@ -70,7 +70,7 @@ The free small IDE for scripting languages.
 </p>
 
 <h2>Code editor and IDE on macOS</h2>
-<p class="small">Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. TextMate is my favourite code editor long years ago and until today, but it still lack some features. As a programmer, so many IDE and text editors I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, and some light cargos, e.g Textadept, CotEditor and TextMate. I never like the bulky cargos, e.g desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small, free and friendly code editor which implements the most important missing features in common code editors, e.g bookmark management and fast locate code lines between multiple files, code block live parsing etc.
+<p class="small">Terminal based on text editors such as GNU Emacs and Vim, although they are very cool, but their limitations are also obvious, the elephant in the room. TextMate is my favourite code editor long years ago and until today, but it still lack some features. As a programmer, so many IDE and text editors I've used in the past years, such as the bulky cargos, Visual Studio Code, Atom, Android Studio, Eclipse, ActiveState Komodo, Xcode, NetBeans, Eclipse, and some light cargos, e.g Textadept, CotEditor and TextMate. I never like the bulky cargos, e.g desktop applications that built with NodeJS, React and Electron, Eclipse and Java or .NET and C# based big stuffs. Speare code editor is a small, free and friendly code editor which implements the most important missing features in common code editors, e.g bookmark management and fast locate code lines between multiple files, code block live parsing etc.
 </p>
 
 
@@ -103,12 +103,12 @@ The free small IDE for scripting languages.
 
 <p class="green">They make software as big as possible, as complex as possible, but I believe in the opposite philosophy. </p>
 
-
 <h2>Why another code editor and IDE on macOS?</h2>
-<p>Although there are so many code editor and IDE available on macOS, but three feature of Speare code editor can make it unique:<br>
-<ol><li><lt>Lightweight.</lt> Most of them are very heavy, bulky, but Speare code editor is really really ultra light. Only 6.2MB!</li>
-<li><lt>Cost.</lt> Most of them are very expensive, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
-<li><lt>Freedom.</lt> Feels light, simple and free, high performance code editor, flexibility to extend the IDE to support special developing requirements and easily add a new programming language to it, most of the IDE on macOS can't give you such ability and freedom. In fact, Speare code editor give you very flexible control to extend it and add a debugging environment for any programming language.
+<p>Although there are so many code editor and IDE available on macOS, but four feature of Speare code editor can make it unique:<br>
+<ol><li><lt>Lightweight.</lt> Most of the code editors on macOS are very heavy, bulky! But Speare code editor is really really ultra light. Only 6.2MB!</li>
+<li><lt>High Performance.</lt> Code editor developed with Javascript or Java have inherent defects that can't keep high performance when handle thousands of files for big project, such as VSCode, Atom, and NetBeans, Eclipse. Speare code editor can handle very big project, for very big C &amp; C++ projects, Java projects, Node projects, and very big game projects! Easily!</li>
+<li><lt>Cost.</lt> Most of them are not free, and even very expensive, such as Sublime Text and BBEDIT etc, but Speare code editor is free! Of course, you can kindly purchase the pro version to donate some money to the author, but that is not mandatory.</li>
+<li><lt>Freedom.</lt> Feels light, simple and free, high performance code editor, flexibility to extend the IDE to support special developing requirements and easily add a new programming language to it, most of the IDE on macOS can't give you such ability and freedom, can't give you smoothly coding experience when mixing multiple programming languages for big software projects. In fact, Speare code editor give you very flexible control to extend it to add a new syntax highlighting for special document and a new debugging environment for any programming language.
 </li>
 </ol></p>
 
